--- a/static/styles.css
+++ b/static/styles.css
@@ -22,10 +22,41 @@ html {
   color:rgb(74, 76, 78)
 }
 
+.taskButton {
+  background-color: rgb(232, 234, 236);
+  border-radius: 10px;
+  font-weight: bold;
+}
+
+.countBadge {
+  border-radius: 10px;
+  font-weight: bold;
+  font-size: medium;
+}
+
 
 #dashboardCard {
   background-color: rgb(62, 70, 77);
   border-radius: 20px
+}
+
+.dashListGroup{
+  background-color: rgb(207, 209, 212);
+  /* color: white; */
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: larger;
+  font-weight: 500;
+}
+
+#taskCard {
+  background-color: rgb(177, 180, 184);
+
+}
+
+#taskID {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  /* text-decoration: dashed underline; */
+  font-weight: 400;
 }
 
 
@@ -44,6 +75,15 @@ thead {
 .newTaskLabel {
   font-size: larger;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: white;
+}
+
+.assignToMeLabel {
+  color: white;
+}
+
+.newTaskTitle{
+  color: white;
 }
 
 
@@ -53,6 +93,12 @@ thead {
 
 .homeCardTitle {
   color: white;
+  font-family: cursive;
+}
+
+.tableTitle {
+  font-family: Verdana, sans-serif;
+  font-weight: 700;
 }
 
 
